--- a/index.html
+++ b/index.html
@@ -25,8 +25,33 @@ $('body').terminal({
     hello: function(name) {
         this.echo('Hello, ' + name +
                   '. Wellcome to this terminal.');
+    },challenge1:function() {
+        this.echo(`
+#include <stdlib.h>
+#include <string.h>
+
+int main(int argc, char const *argv[])
+{
+    char pass[5]="1234"; //5th char is '\0'
+    char input[5]; //5th char is '\0'
+
+    scanf("%s",input);
+    printf("pass:%s\\n",pass);
+    printf("input:%s\\n",input);
+    if (strncmp(input,pass,4) == 0)
+    {
+        printf("OKAY!!");
     }
-}, {
+    else{
+        printf("NOPE!!");
+    }
+    return 0;
+}
+`);
+    }
+
+},
+ {
     greetings: ` 
 																    ⠀⠀⠀⠀⠀⠀⠀⣀⣤⣶⣾⣿⠿⠿⠿⣿⣷⣶⣤⣀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
 																    ⠀⠀⠀⠀⠀⣰⣾⡿⠟⠉⠁⠀⠀⣠⠶⠒⠙⠛⠿⣿⣷⣄⠀⠀⠀⠀⠀⠀⠀⠀⠀
