special char escape

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@ $('body').terminal({
 
 int main(int argc, char const *argv[])
 {
-    char pass[5]="1234"; //5th char is '\0'
-    char input[5]; //5th char is '\0'
+    char pass[5]="1234"; //5th char is '\\0'
+    char input[5]; //5th char is '\\0'
 
     scanf("%s",input);
     printf("pass:%s\\n",pass);
