--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
 
 $('body').terminal({
+
     hello: function(name) {
         this.echo('Hello, ' + name +
                   '. Wellcome to this terminal.');
@@ -48,7 +49,12 @@ int main(int argc, char const *argv[])
     return 0;
 }
 `);
-    }
+    },help:function() {
+    this.echo(`
+hello [name]			returns welcome msg
+challenge1				returns challenge1.c
+`);
+}
 
 },
  {
