remove warnings from challenge1.c

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ $('body').terminal({
         this.echo(`
 #include <stdlib.h>
 #include <string.h>
-
+#include <stdio.h>
 int main(int argc, char const *argv[])
 {
     char pass[5]="1234"; //5th char is '\\0'
